--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     <div class="main">
    
       <section class="HeroSection" id="home">home</section>
+        <section class="HeroSection" id="home">home</section>
+        <section class="HeroSection" id="home">home</section>
+        <section class="HeroSection" id="home">home</section>
+        <section class="HeroSection" id="home">home</section>
 
      
     </div>
